--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Testing Webpack css stuff",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,8 @@
     "css-loader": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0"
+    "webpack": "=4.30.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "=3.8.0"
   }
 }
