--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "Testing Webpack css stuff",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "watch": "webpack --watch --development",
+    "start": "webpack-dev-server --development --open",
+    "prod": "webpack --production",
+    "build": "webpack --development"
   },
   "keywords": [],
-  "author": "",
+  "author": "naprof",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^2.0.0",
+    "cssnano": "^4.1.10",
+    "mini-css-extract-plugin": "^1.1.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "remove-files-webpack-plugin": "^1.4.4",
     "webpack": "=4.30.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "=3.8.0"
