--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "prod": "webpack --production",
     "build": "webpack --development"
   },
+  "browserslist": [
+    "last 10 versions",
+    "ie 11"
+  ],
   "keywords": [],
   "author": "naprof",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-jscript": "^6.22.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^5.0.0",
@@ -20,8 +30,14 @@
     "mini-css-extract-plugin": "^1.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "remove-files-webpack-plugin": "^1.4.4",
-    "webpack": "=4.30.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "=3.8.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
+    "core-js": "^3.6.5"
   }
 }
